--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.22-Alpha, 2018-11-11: Alan 3.0beta6
+v0.7.23-Alpha, 2018-11-12: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -104,6 +104,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN guidare.                  ---> drive
   CAN indossare.                ---> wear
   CAN inventariare.             ---> i            (+ inv, inventory)
+  CAN ispezionare.              ---> search
   CAN lanciare.                 ---> throw
   CAN lanciare_a.               ---> throw_to
   CAN lanciare_contro.          ---> throw_at
@@ -292,7 +293,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN pry_with.
 --CAN put_down. ------------------> ** WASN'T USED! (SEE 'drop'!) **
   CAN rub.
-  CAN search.
   CAN shake.
 --CAN shoot. ---------------------> ** VERBO ELIMINATO **
 --CAN shoot_with. ----------------> ** VERBO ELIMINATO **
