Verbs 'Stand On' + 'Climb On'
Verb restrictions:
- `stand_on` to `salire_su`
- `climb_on` to `arrampicarsi`

Verbs:
- `stand_on` to `sali_su` (+ mettiti su)
- `climb_on` to `arrampicati`

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -135,7 +135,7 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 // -----------------------------------------------------------------------------
 | 21300   |           | gruppo_saltare               | == Saltare
 // -----------------------------------------------------------------------------
-| 21400   |           | gruppo_sedersi               | == Sedersi, Sdraiarsi, Alzarsi
+| 21400   |           | gruppo_sedersi               | == Posizionarsi su Superfici
 // -----------------------------------------------------------------------------
 | 21500   |           | gruppo_lanciare              | == Lanciare
 // -----------------------------------------------------------------------------
